rust/src/bindings.rs

extern "C" { pub fn bicmenc32 (in_ : * mut u32 , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar) -> :: std :: os :: raw :: c_uint ; }
extern "C" { pub fn bicmdec32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u32) -> :: std :: os :: raw :: c_uint ; }
extern "C" { pub fn bitnbound8 (n : usize) -> usize ; }
extern "C" { pub fn bitnbound16 (n : usize) -> usize ; }
extern "C" { pub fn bitnbound32 (n : usize) -> usize ; }
extern "C" { pub fn bitnbound64 (n : usize) -> usize ; }
extern "C" { pub fn bitnbound128v8 (n : usize) -> usize ; }
extern "C" { pub fn bitnbound128v16 (n : usize) -> usize ; }
extern "C" { pub fn bitnbound128v32 (n : usize) -> usize ; }
extern "C" { pub fn bitnbound128v64 (n : usize) -> usize ; }
extern "C" { pub fn bitnbound256v8 (n : usize) -> usize ; }
extern "C" { pub fn bitnbound256v16 (n : usize) -> usize ; }
extern "C" { pub fn bitnbound256v32 (n : usize) -> usize ; }
extern "C" { pub fn bitnbound256v64 (n : usize) -> usize ; }
extern "C" { pub fn bitnpack8 (in_ : * mut u8 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnpack16 (in_ : * mut u16 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnpack32 (in_ : * mut u32 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnpack64 (in_ : * mut u64 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnpack128v16 (in_ : * mut u16 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnpack128v32 (in_ : * mut u32 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnpack128v64 (in_ : * mut u64 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnpack256v32 (in_ : * mut u32 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitndpack8 (in_ : * mut u8 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitndpack16 (in_ : * mut u16 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitndpack32 (in_ : * mut u32 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitndpack64 (in_ : * mut u64 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitndpack128v16 (in_ : * mut u16 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitndpack128v32 (in_ : * mut u32 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitndpack256v32 (in_ : * mut u32 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnd1pack8 (in_ : * mut u8 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnd1pack16 (in_ : * mut u16 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnd1pack32 (in_ : * mut u32 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnd1pack64 (in_ : * mut u64 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnd1pack128v16 (in_ : * mut u16 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnd1pack128v32 (in_ : * mut u32 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnd1pack256v32 (in_ : * mut u32 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnzpack8 (in_ : * mut u8 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnzpack16 (in_ : * mut u16 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnzpack32 (in_ : * mut u32 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnzpack64 (in_ : * mut u64 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnzpack128v16 (in_ : * mut u16 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnzpack128v32 (in_ : * mut u32 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnzpack256v32 (in_ : * mut u32 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnxpack8 (in_ : * mut u8 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnxpack16 (in_ : * mut u16 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnxpack32 (in_ : * mut u32 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnxpack64 (in_ : * mut u64 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnxpack128v16 (in_ : * mut u16 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnxpack128v32 (in_ : * mut u32 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnxpack256v32 (in_ : * mut u32 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnfpack8 (in_ : * mut u8 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnfpack16 (in_ : * mut u16 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnfpack32 (in_ : * mut u32 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnfpack64 (in_ : * mut u64 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnfpack128v16 (in_ : * mut u16 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnfpack128v32 (in_ : * mut u32 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnfpack256v32 (in_ : * mut u32 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitnunpack8 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u8) -> usize ; }
extern "C" { pub fn bitnunpack16 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u16) -> usize ; }
extern "C" { pub fn bitnunpack32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u32) -> usize ; }
extern "C" { pub fn bitnunpack64 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u64) -> usize ; }
extern "C" { pub fn bitnunpack128v16 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u16) -> usize ; }
extern "C" { pub fn bitnunpack128v32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u32) -> usize ; }
extern "C" { pub fn bitnunpack128v64 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u64) -> usize ; }
extern "C" { pub fn bitnunpack256v32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u32) -> usize ; }
extern "C" { pub fn bitndunpack8 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u8) -> usize ; }
extern "C" { pub fn bitndunpack16 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u16) -> usize ; }
extern "C" { pub fn bitndunpack32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u32) -> usize ; }
extern "C" { pub fn bitndunpack64 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u64) -> usize ; }
extern "C" { pub fn bitndunpack128v16 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u16) -> usize ; }
extern "C" { pub fn bitndunpack128v32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u32) -> usize ; }
extern "C" { pub fn bitndunpack256v32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u32) -> usize ; }
extern "C" { pub fn bitnd1unpack8 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u8) -> usize ; }
extern "C" { pub fn bitnd1unpack16 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u16) -> usize ; }
extern "C" { pub fn bitnd1unpack32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u32) -> usize ; }
extern "C" { pub fn bitnd1unpack64 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u64) -> usize ; }
extern "C" { pub fn bitnd1unpack128v16 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u16) -> usize ; }
extern "C" { pub fn bitnd1unpack128v32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u32) -> usize ; }
extern "C" { pub fn bitnd1unpack256v32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u32) -> usize ; }
extern "C" { pub fn bitnzunpack8 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u8) -> usize ; }
extern "C" { pub fn bitnzunpack16 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u16) -> usize ; }
extern "C" { pub fn bitnzunpack32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u32) -> usize ; }
extern "C" { pub fn bitnzunpack64 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u64) -> usize ; }
extern "C" { pub fn bitnzunpack128v16 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u16) -> usize ; }
extern "C" { pub fn bitnzunpack128v32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u32) -> usize ; }
extern "C" { pub fn bitnzunpack256v32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u32) -> usize ; }
extern "C" { pub fn bitnxunpack8 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u8) -> usize ; }
extern "C" { pub fn bitnxunpack16 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u16) -> usize ; }
extern "C" { pub fn bitnxunpack32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u32) -> usize ; }
extern "C" { pub fn bitnxunpack64 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u64) -> usize ; }
extern "C" { pub fn bitnxunpack128v16 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u16) -> usize ; }
extern "C" { pub fn bitnxunpack128v32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u32) -> usize ; }
extern "C" { pub fn bitnxunpack256v32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u32) -> usize ; }
extern "C" { pub fn bitnfunpack8 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u8) -> usize ; }
extern "C" { pub fn bitnfunpack16 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u16) -> usize ; }
extern "C" { pub fn bitnfunpack32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u32) -> usize ; }
extern "C" { pub fn bitnfunpack64 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u64) -> usize ; }
extern "C" { pub fn bitnfunpack128v16 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u16) -> usize ; }
extern "C" { pub fn bitnfunpack128v32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u32) -> usize ; }
extern "C" { pub fn bitnfunpack256v32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u32) -> usize ; }
extern "C" { pub fn bitns1pack128v16 (in_ : * mut u16 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitns1pack128v32 (in_ : * mut u32 , n : usize , out : * mut :: std :: os :: raw :: c_uchar) -> usize ; }
extern "C" { pub fn bitns1unpack128v16 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u16) -> usize ; }
